[package]
name = "jbod"
version = "1.0.1"
authors = ["Marcelo Araujo <marcelo.araujo@gandi.net>"]
edition = "2021"
license = "BSD-2-Clause"
description = "jbod - storage enclosure utility"
readme = "README.md"
keywords = ["jbod", "storage", "disks"]
categories = ["command-line-utilities"]

[[bin]]
name = "prometheus-jbod-exporter"
path = "src/prometheus.rs"

[dependencies]
clap = { version = "3.2" }
colored = "2"
prettytable-rs = "0.10.0"
nix = "0.26.0"
tokio = { version = "1", features = ["full"] }
warp = "0.3.3"
prometheus = {version = "0.13", features = ["process"] }
lazy_static = "1.4"
futures = { version = "0.3", default-features = false }
subprocess = "0.2.7"
regex = "1"

[package.metadata.deb]
name = "gandi-jbod"
maintainer-scripts = "debian/"
systemd-units = { enable = true }
